# whispercrawl

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  VISION.MD  config.yaml  pyproject.toml
.claude/: settings.json
epics/: EPIC-001-transcription.md  EPIC-002-postprocessing.md  EPIC-003-summarization.md  EPIC-004-scheduler.md  EPIC-005-cleanup-and-logging.md  EPIC-006-cleanup-cli.md  EPIC-007-asr-engine-config.md  EPIC-008-postprocessing-split-enabled.md  EPIC-009-enhanced-service-logging.md  EPIC-010-app-logging-to-file.md  EPIC-011-summarization-source-selection.md  EPIC-012-docker-environments.md  EPIC-013-replace-transcription.md  EPIC-014-diarization-response-logging.md  EPIC-015-diarization-speaker-labels.md  EPIC-016-remove-err-on-success.md  EPIC-017-config-to-project-root.md  EPIC-018-cleanup-removes-err-files.md  EPIC-019-deployment-packages.md  EPIC-020-rename-to-whispercrawl.md  EPIC-021-prod-local-all-in-one.md  EPIC-022-output-format.md  EPIC-023-format-conversion-step.md  EPIC-024-formatter-config-section.md  EPIC-025-formatter-md-format.md  EPIC-026-formatter-speaker-style.md  EPIC-027-cleanup-md-html-extensions.md  EPIC-028-skip-on-format-change.md  EPIC-029-rescan-cleans-other-formats.md  EPIC-030-formatter-after-dir-sum.md  EPIC-031-skip-marker-in-filename.md  EPIC-032-immediate-first-run.md
tasks/: backlog.md  done.md
tests/: conftest.py  test_cleanup_cli.py  test_dry_run.py  test_file_walker.py  test_formatter.py  test_output_format.py  test_pipeline_err_cleanup.py  test_postprocessor.py  test_rescan_cleans_formats.py  (+2 more)
(+48 files in other folders)
